core: Add function to load plugin by ID

Add grl_plugin_registry_load_by_id(), which allows to load a specific plugin by
its identifier.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=628898

Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>