src/grl-plugin-registry.h
@@ -220,6 +220,10 @@ gboolean grl_plugin_registry_unload (GrlPluginRegistry *registry,
 gboolean grl_plugin_registry_load_all (GrlPluginRegistry *registry,
                                        GError **error);
 
+gboolean grl_plugin_registry_load_by_id (GrlPluginRegistry *registry,
+                                         const gchar *plugin_id,
+                                         GError **error);
+
 gboolean grl_plugin_registry_register_source (GrlPluginRegistry *registry,
                                               const GrlPluginInfo *plugin,
                                               GrlMediaPlugin *source,
